@@ -1,30 +1,30 @@
 package io.github.a5b84.darkloadingscreen.config;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import me.shedaniel.clothconfig2.api.AbstractConfigListEntry;
-import net.minecraft.client.MinecraftClient;
-import net.minecraft.client.gui.DrawContext;
-import net.minecraft.client.gui.Element;
-import net.minecraft.client.gui.Selectable;
-import net.minecraft.client.gui.widget.ButtonWidget;
-import net.minecraft.text.Text;
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.client.gui.components.Button;
+import net.minecraft.client.gui.components.events.GuiEventListener;
+import net.minecraft.client.gui.narration.NarratableEntry;
+import net.minecraft.network.chat.Component;
+import org.jetbrains.annotations.NotNull;
 
 /** Clickable button entry for Cloth Config that doesn't hold any data */
 public class ButtonEntry extends AbstractConfigListEntry<Void> {
 
-  private final ButtonWidget button;
+  private final Button button;
 
-  public ButtonEntry(Text fieldName, ButtonWidget.PressAction onPress) {
+  public ButtonEntry(Component fieldName, Button.OnPress onPress) {
     super(fieldName, false);
-    int width = MinecraftClient.getInstance().textRenderer.getWidth(fieldName) + 24;
-    button = ButtonWidget.builder(fieldName, onPress).width(width).build();
+    int width = Minecraft.getInstance().font.width(fieldName) + 24;
+    button = Button.builder(fieldName, onPress).width(width).build();
   }
 
   @Override
   public void render(
-      DrawContext context,
+      GuiGraphics graphics,
       int index,
       int y,
       int x,
@@ -34,10 +34,10 @@ public class ButtonEntry extends AbstractConfigListEntry<Void> {
       int mouseY,
       boolean isHovered,
       float delta) {
-    super.render(context, index, y, x, entryWidth, entryHeight, mouseX, mouseY, isHovered, delta);
+    super.render(graphics, index, y, x, entryWidth, entryHeight, mouseX, mouseY, isHovered, delta);
     button.setX(x + (entryWidth - button.getWidth()) / 2);
     button.setY(y + (entryHeight - button.getHeight()) / 2);
-    button.render(context, mouseX, mouseY, delta);
+    button.render(graphics, mouseX, mouseY, delta);
   }
 
   @Override
@@ -53,17 +53,14 @@ public class ButtonEntry extends AbstractConfigListEntry<Void> {
   @Override
   public void save() {}
 
-  private List<ButtonWidget> children0() {
-    return Collections.singletonList(button);
+  @Override
+  @NotNull
+  public List<? extends GuiEventListener> children() {
+    return List.of(button);
   }
 
   @Override
-  public List<? extends Element> children() {
-    return children0();
-  }
-
-  @Override
-  public List<? extends Selectable> narratables() {
-    return children0();
+  public List<? extends NarratableEntry> narratables() {
+    return List.of(button);
   }
 }
